--- a/style.css
+++ b/style.css
@@ -1,13 +1,31 @@
 body{
     margin: 0 auto;
-    padding: 50px;
-    padding-top: 10px;
-    width: 45%;
+    padding: 3%;
+    width: 50%;
+    height: 700px;
     background: #fbfbfa;
     color: white;
+    text-align: center;
 }
-h1{ color: white; font-size: 20px; text-align: center;}
-h2{ color: white; font-size: 16px; text-align: center;}
+h1{
+    color: black;
+    font-size: 1.5rem;
+    text-align: center;
+}
+style{
+    text-align:center;
+    color:#333;
+}
+.game-window{
+    background:black;
+    padding:15px;
+}
+h2{
+    color: white;
+    font-size: 1.3rem;
+    text-align: center;
+    margin: 3%;
+}
 form{
     overflow: hidden;
 }
@@ -39,6 +57,19 @@ input[type="submit"]{
     color: white;
     float: right;
 }
+.monster-image{
+    width:120px;
+    margin:0 auto;
+    display:block;
+}
+.monster-image img{
+    height:130px;
+    width: auto;
+}
+.monster-hp{
+    font-size:14px;
+    text-align:center;
+}
 input[type="submit"]:hover{
     background: #3d3938;
     cursor: pointer;
@@ -49,4 +80,20 @@ a{
 }
 a:hover{
     text-decoration: none;
+}
+.history{
+    top:400px;
+    color:white;
+    width: 100%;
+    max-height:200px;
+    background: black;
+    padding:15px;
+    border: double 10px white;
+    font-size: 0.7rem;
+}
+.history .message{
+    padding-bottom: 10px;
+    max-height: 160px;
+    overflow: scroll;
+    text-align: start;
 }
