--- a/style.css
+++ b/style.css
@@ -51,11 +51,23 @@ input[type="password"]{
 }
 input[type="submit"]{
     border: none;
-    padding: 15px 30px;
-    margin-bottom: 15px;
+    padding: 10px 20px;
+    margin: 0 10px;
     background: black;
     color: white;
+    float: left;
+    font-size: 0.8rem;
+}
+input[type="submit"]:hover{
+    background: gray;
+    color: white;
+}
+input[type="submit"]:last-child{
+    margin: 15px 0px;
     float: right;
+    background: rgb(243, 224, 48);
+    color: black;
+    border-radius: 15px;
 }
 .monster-image{
     width:120px;
@@ -68,7 +80,14 @@ input[type="submit"]{
 }
 .monster-hp{
     font-size:14px;
-    text-align:center;
+    text-align:right;
+}
+.hero-hp{
+    text-align: left;
+}
+.monster-count{
+    text-align: right;
+    font-size: 0.7rem;
 }
 input[type="submit"]:hover{
     background: #3d3938;
