--- a/style.css
+++ b/style.css
@@ -30,8 +30,26 @@ style{
 h2{
     color: white;
     font-size: 1.3rem;
-    text-align: center;
+    text-align: initial;
     margin: 3%;
+}
+/* ------------
+    monster-title
+--------------*/
+.encounter{
+    animation-name: fadein;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+}
+@keyframes fadein{
+    from{
+        opacity: 0;
+        transform: translateX(20px)
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0)
+    }
 }
 form{
     overflow: hidden;
