--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ a:hover{
     attack
 -------------------------*/
 .shock{
-    animation-name:shock;
+    animation-name:"shock";
     animation-iteration-count:1;
     animation-duration:1s;
 }
